== Master

* 'cron' style generator added
* Allow configuring dir_mode and dir (pid file location) (Jim Lindley)

== 0.1.0 2009-01-08

* Ability to freeze the gem/edge copies of DaemonKit
* Simple non-evented Jabber generator
* Flexible UNIX signal trapping configuration
* Basic generator completed
* 1 small step for man, 1 giant leap for mankind